--- a/packages/react-devtools-ui/src/styles/base.css
+++ b/packages/react-devtools-ui/src/styles/base.css
@@ -85,11 +85,11 @@ table {
   background: var(--color-neutral-500);
 }
 
-[data-theme="dark"] ::-webkit-scrollbar-thumb {
+[data-theme='dark'] ::-webkit-scrollbar-thumb {
   background: var(--color-neutral-600);
 }
 
-[data-theme="dark"] ::-webkit-scrollbar-thumb:hover {
+[data-theme='dark'] ::-webkit-scrollbar-thumb:hover {
   background: var(--color-neutral-500);
 }
 
@@ -105,7 +105,6 @@ table {
   color: var(--color-text-primary);
 }
 
-[data-theme="dark"] ::selection {
+[data-theme='dark'] ::selection {
   background-color: var(--color-primary-800);
 }
-
